--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Dimitrios - Georgios Kontopoulos"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Dimitrios - Georgios Kontopoulos"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -78,13 +78,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Dimitrios - Georgios Kontopoulos"
+  avatar           : "avatar.jpg"
+  bio              : "3rd year PhD student at Imperial College London, investigating the <b>limits to thermal adaptation in ectotherms</b>. Will be looking for a postdoc position in mid-2019."
+  location         : "Department of Life Sciences, <br>Imperial College London, Silwood<br>Park, Ascot, United Kingdom"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  googlescholar    : "https://scholar.google.gr/citations?user=HhRasxEAAAAJ&hl"
+  email            : "d.kontopoulos13[AT]imperial[DOT]ac[DOT]uk"
   uri              :
   bitbucket        :
   codepen          :
@@ -92,19 +92,19 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "dgkontopoulos"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0002-5082-1929"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "DGKontopoulos"
   vine             :
   weibo            :
   xing             :
