--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Dimitrios - Georgios Kontopoulos"
   avatar           : "avatar.jpg"
-  bio              : "3rd year PhD student at Imperial College London, investigating the <b>limits to thermal adaptation in ectotherms</b>. Will be looking for a postdoc position in mid-2019."
+  bio              : "TEST 3rd year PhD student at Imperial College London, investigating the <b>limits to thermal adaptation in ectotherms</b>. Will be looking for a postdoc position in mid-2019."
   location         : "Department of Life Sciences, <br>Imperial College London, Silwood<br>Park, Ascot, United Kingdom"
   employer         :
   googlescholar    : "https://scholar.google.gr/citations?user=HhRasxEAAAAJ&hl"
