--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,13 @@
 # main links links
 main:
-  - title: "Research interests"
-    url: /research-interests/
+  - title: "Research"
+    url: /research/
 
   - title: "Publications"
     url: /publications/
 
-  - title: "Conferences"
-    url: /talks/    
-
   - title: "Teaching"
     url: /teaching/
-
-  - title: "Awards"
-    url: /awards/
         
   - title: "News"
     url: /news/
