--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   bio              : "bio..............."
   location         : "Location........................."
   employer         :
-  googlescholar    : "GScholar..................."
-  email            : "emial........................."
+  googlescholar    : "https://scholar.google.com/citations?user=srEKmk0AAAAJ&hl=en"
+  email            : "hamilton.1323@osu.edu"
   uri              :
   bitbucket        :
   codepen          :
