--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "orc................"
+  orcid            : "0000-0003-0509-4467"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
