--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Matt Hamilton"
   avatar           : "avatar.jpg"
   bio              : "Assistant Professor, School of Environment and Natural Resources, The Ohio State University"
-  location         : "https://www.google.com/maps/place/Kottman+Hall/@40.0030112,-83.0269067,15z/data=!4m5!3m4!1s0x0:0x1b78efad9ead3f9c!8m2!3d40.0030112!4d-83.0269067"
+  location         : "Columbus, OH"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=srEKmk0AAAAJ&hl=en"
   email            : "hamilton.1323@osu.edu"
