--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ main:
   - title: "Teaching"
     url: /teaching/
         
-#  - title: "News"
- #   url: /news/
+  - title: "Opportunities"
+    url: /opportunities/
